--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@angular/forms": "^16.0.4",
     "@capacitor/android": "^4.7.3",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.0",
+    "@capacitor/core": "^5.0.5",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/ios": "^5.0.4",
     "@capacitor/keyboard": "4.1.1",
