--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion '30.0.3'
     compileSdk 32
     defaultConfig {
-        applicationId "io.ionic.starter"
+        applicationId 'io.ionic.starter'
         minSdk 27
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName '1.20'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
