--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'com.android.application'
 android {
 
     buildToolsVersion '30.0.3'
-    compileSdk 32
+    compileSdk 33
     defaultConfig {
-        applicationId 'io.ionic.starter'
+        applicationId 'app.evo'
         minSdk 27
         targetSdk 33
-        versionCode 6
-        versionName '1.6'
+        versionCode 7
+        versionName '1.7'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
