--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@angular/forms": "^16.0.4",
     "@capacitor/android": "^4.7.3",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "^5.0.5",
+    "@capacitor/core": "^4.8.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/ios": "^5.0.4",
     "@capacitor/keyboard": "4.1.1",
+    "@capacitor/preferences": "^5.0.6",
+    "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/status-bar": "4.1.1",
+    "@ionic-native/push": "^5.36.0",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -78,7 +81,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.7.0",
+    "@capacitor/cli": "^4.7.0",
     "react-scripts": "5.0.1"
   },
   "description": "An Ionic project"
